--- a/Juegodadoscorrecto/src/juegodadoscorrecto/Pantalla.form
+++ b/Juegodadoscorrecto/src/juegodadoscorrecto/Pantalla.form
@@ -30,12 +30,11 @@
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="102" attributes="0">
                               <Component id="botonApostar" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace pref="45" max="32767" attributes="0"/>
-                              <Component id="textoApuesta" min="-2" pref="157" max="-2" attributes="0"/>
+                              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                           </Group>
                           <Group type="102" attributes="0">
                               <Component id="valor1" min="-2" pref="83" max="-2" attributes="0"/>
-                              <EmptySpace max="32767" attributes="0"/>
+                              <EmptySpace pref="109" max="32767" attributes="0"/>
                               <Component id="valor2" min="-2" pref="83" max="-2" attributes="0"/>
                           </Group>
                       </Group>
@@ -43,7 +42,11 @@
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="165" max="-2" attributes="0"/>
-                      <Component id="botonJugar" min="-2" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="textoApuesta" min="-2" pref="157" max="-2" attributes="0"/>
+                          <Component id="botonJugar" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                   </Group>
               </Group>
               <EmptySpace max="32767" attributes="0"/>
@@ -115,6 +118,9 @@
       </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="textoApuesta">
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="textoApuestaActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
